<resources>
    <string name="app_name">FitFastApp</string>
    

    <!-- Activity Title Strings -->
    <string name="title_activity_dash">Dashboard</string>

    <string name="title_activity_login">FitFast</string>
    <string name="title_activity_calorie_input">Calorie Input</string>
    <string name="title_activity_dash_board">Dashboard</string>
    <string name="title_activity_stats">User Stats</string>
    <string name="title_activity_workout">Workout</string>
    <string name="title_activity_history">History</string>
    <string name="title_activity_create_account">Create Account</string>



    <!-- Strings related to Login -->
    <string name="hint_username">User</string>
    <string name="hint_password">Password</string>
    <string name="login">Login</string>
    <string name="create_account">Create An Account</string>
    <string name="sign_in">Sign in</string>
    <string name="email">Email</string>


    <!-- Strings related to Workout -->
    <string name="enter_calories_burned">Enter Calories Burned:</string>
    <string name="today_calories_burned">Today\'s Calories Burned:</string>
    <string name="back_to_dashboard">Back to DashBoard</string>


    <!-- Strings related to Food -->
    <string name="enter_calories_eaten">Enter Calories Eaten:</string>
    <string name="today_calories_eaten">Today\'s Calories Eaten:</string>


    <!-- Strings related to Food and Workout -->
    <string name="enter">Enter</string>
    <string name="zero">0</string>


    <!-- Strings related to Stats, Account, and DashBoard -->
    <string name="name">Name:</string>
    <string name="hint_name">10 char max</string>
    <string name="hint_pass">16 char max</string>
    <string name="hint_age">1-120</string>
    <string name="age">Age:</string>
    <string name="gender">Gender:</string>
    <string name="height">Height:</string>
    <string name="weight">Weight:</string>


    <!-- Strings related to Stats and Account-->
    <string name="password">Pass:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="target_weight">Target Weight:</string>
    <string name="desired_weekly_workouts">Desired # of Weekly Workouts</string>
    <string name="activity_level">Activity Level:</string> <!-- Consider array for list-->
    <string name="activity_low">Low</string>
    <string name="activity_medium">Medium</string>
    <string name="activity_high">High</string>
    <string name="time_frame">Time Frame:</string><!-- Consider date input -->
    <string name="time_under_3">1-3 Months</string>
    <string name="time_under_6">3-6 Months</string>
    <string name="time_over_6">6+ Months</string>
    <string name="done">Done</string>


    <!-- Strings related to Account -->
    <string name="date_of_birth">Date of Birth:</string>
    <string name="hint_inches">In Inches</string>
    <string name="hint_pounds">In Pounds</string>
    <string name="hint_days">1-14</string>
    <string name="hint_activity">1(low) - 5(high)</string>



    <!-- Strings related to DashBoard -->
    <string name="bmi">BMI:</string>
    <string name="pounds_lost">Lbs Lost:</string>
    <string name="pounds_left">Lbs Left:</string>
    <string name="pounds_goal">Goal:</string>
    <string name="daily_cals">Calorie Goal:</string>
    <string name="today_total">Todays Total:</string>
    <string name="target_diff">Target Diff:</string>
    <string name="calorie_intake">Todays cals in</string>
    <string name="calorie_burn">Todays cals burned</string>
    <string name="calorie_remain">Remaining cals</string>
    <string name="action_food">Enter Food</string>
    <string name="action_workout">Start Workout</string>
    <string name="action_stats">Edit Stats</string>
    <string name="action_progress">Track Progress</string>
    <!-- Try to replace the following two with better descriptions -->
    <string name="maintenance">Natural Cals:</string>
    <string name="daily">Daily Goal:</string>


    <!-- Strings related to Navigation Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <!-- Strings related to Settings -->
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>


    <!-- Strings based on the user -->
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>


    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>


    <!-- Strings related to Errors / Permissions -->
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>


    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_cardio">Cardio</string>

    <!-- Exercises -->
    <string-array name="cardio_workouts">
        <item>Walking</item>
        <item>Running</item>
    </string-array>

    <string-array name="body_weight_workouts">
        <item>Push-ups</item>
        <item>Sit-ups</item>
    </string-array>

    <string-array name="weights_workouts">
        <item>Curls</item>
        <item>Bench-Press</item>
        <item>Squats</item>
        <item>Deadlift</item>
    </string-array>



    <string name="title_activity_body_weight_exercise">Body Weight Exercise</string>
    <string name="title_activity_weights">Weights</string>


</resources>
