<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="cse280.fitfastapp.CreateAccount"
    tools:showIn="@layout/activity_create_account"
    android:orientation="vertical"
    android:weightSum="1"
    android:background="@drawable/background">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/name"
            android:id="@+id/textView20" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/set_name"
            android:singleLine="true"
            android:hint="@string/hint_name" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="46dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/password"
            android:id="@+id/asdsad" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:password="true"
            android:id="@+id/set_password"
            android:layout_weight="1"
            android:singleLine="true"
            android:hint="@string/hint_pass" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:weightSum="1"
        android:layout_weight="0.42">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/age"
            android:id="@+id/textView22" />

        <EditText
            android:layout_width="111dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/set_age"
            android:hint="@string/hint_age"
            android:singleLine="true" />

        <TextView
            android:layout_width="78dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/gender"
            android:id="@+id/textView45" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RadioButton
                android:layout_width="99dp"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:id="@+id/male"
                android:checked="false"
                android:onClick="onRadioButtonClicked" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:id="@+id/female"
                android:checked="false"
                android:onClick="onRadioButtonClicked" />
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/height"
            android:id="@+id/textView43"
            android:layout_weight="0.46" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/weight"
            android:id="@+id/textView44"
            android:layout_weight="0.49" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="111dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/set_height"
            android:layout_marginRight="25dp"
            android:hint="@string/hint_inches"
            android:singleLine="true" />

        <EditText
            android:layout_width="149dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/set_weight"
            android:hint="@string/hint_pounds"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/target_weight"
            android:id="@+id/textView463"
            android:layout_weight="2.04" />

        <TextView
            android:layout_width="195dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/desired_weekly_workouts"
            android:id="@+id/textView454" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="111dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/set_goal"
            android:layout_marginRight="25dp"
            android:hint="@string/hint_pounds"
            android:singleLine="true" />

        <EditText
            android:layout_width="149dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/set_desired_workouts"
            android:hint="@string/hint_days"
            android:singleLine="true"
            android:autoText="false"
            android:password="false"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/activity_level"
            android:id="@+id/textView434"
            android:layout_weight="0.46" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/time_frame"
            android:id="@+id/textView445"
            android:layout_weight="0.49" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_weight="0.09">

        <EditText
            android:layout_width="139dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/set_activity_level"
            android:hint="@string/hint_activity"
            android:singleLine="true" />

        <RadioGroup
            android:layout_width="177dp"
            android:layout_height="83dp">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_under_3"
                android:id="@+id/one"
                android:checked="false"
                android:onClick="onRadioButtonClicked" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_under_6"
                android:id="@+id/three"
                android:checked="false"
                android:onClick="onRadioButtonClicked" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_over_6"
                android:id="@+id/six"
                android:checked="false"
                android:onClick="onRadioButtonClicked" />

        </RadioGroup>
    </LinearLayout>

    <Button
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:id="@+id/done"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/buttonshape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:onClick="done" />


</LinearLayout>