<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_calorie_input" tools:context="cse280.fitfastapp.CalorieInput"
    android:orientation="vertical"
    android:weightSum="1"
    android:background="@drawable/background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/enter_calories_eaten"
        android:id="@+id/textView16"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="42dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:layout_weight="0.09"
        android:layout_marginTop="10dp"
        android:weightSum="1">

        <EditText
            android:layout_width="114dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/calories_eaten"
            android:layout_alignBottom="@+id/button7"
            android:layout_toLeftOf="@+id/button7"
            android:layout_toStartOf="@+id/button7"
            android:layout_weight="0.92"
            android:singleLine="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter"
            android:id="@+id/button7"
            android:layout_below="@+id/textView16"
            android:layout_toRightOf="@+id/textView16"
            android:layout_toEndOf="@+id/textView16"
            android:onClick="addTotal" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/today_calories_eaten"
        android:id="@+id/textView18"
        android:layout_below="@+id/button7"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/zero"
        android:id="@+id/calories_eaten_display"
        android:layout_below="@+id/textView18"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_to_dashboard"
        android:id="@+id/button8"
        android:layout_below="@+id/calories_eaten_display"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:onClick="toDash"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
