<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_workout" tools:context="cse280.fitfastapp.Workout"
    android:orientation="vertical"
    android:weightSum="1"
    android:background="@drawable/background">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="58dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cardio"
            android:id="@+id/cardio_button"
            android:onClick="cardio" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Body Weight"
            android:id="@+id/button6"
            android:onClick="bodyWeight" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Weight Training"
            android:id="@+id/button10"
            android:onClick="weights" />
    </LinearLayout>

    <TextView
        android:layout_width="274dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Or, enter calories manually"
        android:id="@+id/textView17"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="22dp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_calories_burned"
        android:id="@+id/d"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="32dp"
        android:textSize="20dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="96dp">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/calories_burned"
            android:layout_below="@+id/d"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_weight="1"
            android:singleLine="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter"
            android:id="@+id/updateburn"
            android:layout_below="@+id/d"
            android:layout_toRightOf="@+id/d"
            android:layout_toEndOf="@+id/d"
            android:onClick="addTotal"
            android:layout_weight="1" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/today_calories_burned"
        android:id="@+id/total_calories_burned"
        android:layout_below="@+id/updateburn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/zero"
        android:id="@+id/calories_burned_today"
        android:layout_below="@+id/total_calories_burned"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="202dp"
        android:layout_height="wrap_content"
        android:text="@string/back_to_dashboard"
        android:id="@+id/button9"
        android:layout_below="@+id/calories_burned_today"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="70dp"
        android:onClick="toDashboard" />

</LinearLayout>
